Правки по мелочи(убрал Toast, и ...

--- a/app/src/main/res/layout/set_user_phone.xml
+++ b/app/src/main/res/layout/set_user_phone.xml
@@ -21,7 +21,8 @@
             android:id="@+id/valueInputPhone"
             android:layout_alignParentTop="true"
             android:layout_alignParentRight="true"
-            android:layout_alignParentEnd="true" android:gravity="left"/>
+            android:layout_alignParentEnd="true"
+            android:gravity="left"/>
     <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
@@ -31,6 +32,13 @@
             android:layout_marginTop="15dp"
             android:layout_below="@+id/valueInputPhone"
             android:layout_centerHorizontal="true"/>
+    <ExpandableListView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:id="@+id/expandableListView"
+            android:layout_centerHorizontal="true"
+            android:layout_below="@+id/text_notification_type"
+            android:layout_above="@+id/btn_set_user_phone"/>
     <Button
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
@@ -39,11 +47,4 @@
             android:onClick="onClick"
             android:layout_alignParentBottom="true"
             android:layout_centerHorizontal="true"/>
-    <ExpandableListView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:id="@+id/expandableListView"
-            android:layout_centerHorizontal="true"
-            android:layout_below="@+id/text_notification_type"
-            android:layout_above="@+id/btn_set_user_phone"/>
 </RelativeLayout>
