--- a/app/src/main/res/layout/list_user_phones.xml
+++ b/app/src/main/res/layout/list_user_phones.xml
@@ -1,11 +1,30 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-              android:orientation="vertical"
-              android:layout_width="match_parent"
-              android:layout_height="match_parent">
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+                android:orientation="vertical"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent">
 
-    <ListView
-            android:layout_width="match_parent"
+    <TextView
+            android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:id="@+id/listUserPhones"/>
-</LinearLayout>
+            android:textAppearance="?android:attr/textAppearanceLarge"
+            android:text="Список телефонов пользователя"
+            android:id="@+id/textView"
+            android:layout_alignParentTop="true"
+            android:layout_centerHorizontal="true"/>
+    <ListView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:id="@+id/listUserPhones"
+            android:layout_below="@+id/textView"
+            android:layout_centerHorizontal="true"
+            android:layout_above="@+id/btnOk"/>
+    <Button
+            android:layout_width="200dp"
+            android:layout_height="wrap_content"
+            android:text="OK"
+            android:id="@+id/btnOk"
+            android:layout_alignParentBottom="true"
+            android:layout_centerHorizontal="true"
+            android:onClick="onClick"/>
+</RelativeLayout>
