Начадо работы над управлением реле. Создан массив режимов работы реле. Созданы фрагменты: основной экран -  relay_view, экран для установки режимов работы отдельного реле - set_relay_basic, list_control_mode_fragment - для выбора непосредственно ражима управления

--- a/app/src/main/res/values/arrays.xml
+++ b/app/src/main/res/values/arrays.xml
@@ -16,4 +16,13 @@
         <item>Оповещение только смс сообщением</item>
         <item>Оповещение смс сообщением и звонком с голосовым сообщением</item>
     </string-array>
+
+    <string-array name="controlMode">
+        <item>Выключить РЕЛЕ</item>
+        <item>Включить РЕЛЕ на заданное время</item>
+        <item>Режим - РЕВУН</item>
+        <item>Циклическое переключение РЕЛЕ</item>
+        <item>Режим - ЛАМПА</item>
+        <item>Включение-выключение РЕЛЕ по часам реального времени</item>
+    </string-array>
 </resources>
