--- a/app/src/main/res/layout/list_user_phones.xml
+++ b/app/src/main/res/layout/list_user_phones.xml
@@ -9,14 +9,14 @@
             android:layout_height="wrap_content"
             android:textAppearance="?android:attr/textAppearanceLarge"
             android:text="Список телефонов пользователя"
-            android:id="@+id/textView"
+            android:id="@+id/textSetRelay"
             android:layout_alignParentTop="true"
             android:layout_centerHorizontal="true"/>
     <ListView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:id="@+id/listUserPhones"
-            android:layout_below="@+id/textView"
+            android:layout_below="@+id/textSetRelay"
             android:layout_centerHorizontal="true"
             android:layout_above="@+id/btnOk"/>
     <Button
