--- a/app/src/main/res/layout/set_user_phone.xml
+++ b/app/src/main/res/layout/set_user_phone.xml
@@ -42,7 +42,7 @@
     <Button
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="@string/text_btn_set_user_phone"
+            android:text="@string/text_btn_apply"
             android:id="@+id/btn_set_user_phone"
             android:onClick="onClick"
             android:layout_alignParentBottom="true"
