Начало обработки РЕЛЕ.

--- a/app/src/main/res/layout/relay_view.xml
+++ b/app/src/main/res/layout/relay_view.xml
@@ -1,63 +1,14 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
-				android:layout_width="match_parent"
-				android:layout_height="match_parent"
-				android:orientation="vertical" >
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:orientation="vertical">
 
-	<Button
-			android:layout_width="wrap_content"
-			android:layout_height="wrap_content"
-			android:text="@string/btnRelay1"
-			android:id="@+id/btnRelay1"
-			android:layout_alignParentTop="true"
-			android:layout_alignParentLeft="true"
-			android:layout_alignParentStart="true"
-			android:layout_marginLeft="30dp"
-			android:layout_marginStart="30dp"
-			android:layout_marginTop="108dp" />
-	<Button
-			android:layout_width="wrap_content"
-			android:layout_height="wrap_content"
-			android:text="@string/btnRelay2"
-			android:id="@+id/btnRelay2"
-			android:layout_alignTop="@+id/btnRelay1" android:layout_centerHorizontal="true"/>
-	<Button
-			android:layout_width="wrap_content"
-			android:layout_height="wrap_content"
-			android:text="@string/btnRelay3"
-			android:id="@+id/btnRelay3"
-			android:layout_alignTop="@+id/btnRelay2"
-			android:layout_alignParentRight="true"
-			android:layout_alignParentEnd="true"
-			android:layout_marginRight="21dp"
-			android:layout_marginEnd="21dp"
-			/>
-	<Button
-			android:layout_width="wrap_content"
-			android:layout_height="wrap_content"
-			android:text="@string/btnRelay4"
-			android:id="@+id/btnRelay4"
-			android:layout_below="@+id/btnRelay1"
-			android:layout_alignLeft="@+id/btnRelay1"
-			android:layout_alignStart="@+id/btnRelay1"
-			android:layout_marginTop="85dp"
-			/>
-	<Button
-			android:layout_width="wrap_content"
-			android:layout_height="wrap_content"
-			android:text="@string/btnRelay5"
-			android:id="@+id/btnRelay5"
-			android:layout_alignTop="@+id/btnRelay4"
-			android:layout_alignLeft="@+id/btnRelay2"
-			android:layout_alignStart="@+id/btnRelay2"
-			/>
-	<Button
-			android:layout_width="wrap_content"
-			android:layout_height="wrap_content"
-			android:text="@string/btnRelay6"
-			android:id="@+id/btnRelay6"
-			android:layout_alignTop="@+id/btnRelay5"
-			android:layout_alignLeft="@+id/btnRelay3"
-			android:layout_alignStart="@+id/btnRelay3"
-			/>
+    <ExpandableListView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:id="@+id/expandableListView2" android:layout_alignParentTop="true"
+            android:layout_alignParentLeft="true" android:layout_alignParentStart="true"
+            android:layout_alignParentRight="true"
+            android:layout_alignParentEnd="true"/>
 </RelativeLayout>
