--- a/app/src/main/res/layout/set_relay_basic.xml
+++ b/app/src/main/res/layout/set_relay_basic.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
-                android:orientation="vertical"
+                xmlns:tools="http://schemas.android.com/tools" android:orientation="vertical"
                 android:layout_width="match_parent"
                 android:layout_height="match_parent" android:weightSum="1">
 
@@ -10,19 +10,34 @@
             android:textAppearance="?android:attr/textAppearanceLarge"
             android:text="@string/textSetRelay"
             android:id="@+id/textSetRelay"
-            android:layout_marginTop="45dp" android:layout_gravity="center_horizontal"
+            android:layout_gravity="center_horizontal"
             android:layout_alignParentTop="true" android:layout_centerHorizontal="true"/>
     <Button
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="@string/text_btn_apply"
-            android:id="@+id/button" android:layout_gravity="center_horizontal"
-            android:layout_alignParentBottom="true" android:layout_centerHorizontal="true"/>
+            android:id="@+id/button"
+            android:layout_gravity="center_horizontal"
+            android:layout_alignParentBottom="true"
+            android:layout_centerHorizontal="true"/>
     <TextView
-            android:layout_width="wrap_content"
+            android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:textAppearance="?android:attr/textAppearanceLarge"
-            android:text="Режим управления"
-            android:id="@+id/textModeControl" android:layout_below="@+id/textSetRelay" android:layout_centerHorizontal="true"
+            android:text="@string/textModelControl"
+            android:id="@+id/textModeControl"
+            android:layout_below="@+id/textSetRelay"
+            android:layout_centerHorizontal="true"
             android:layout_marginTop="45dp"/>
+    <fragment android:layout_width="wrap_content"
+              android:layout_height="wrap_content"
+              android:name="com.example.cottagealarmandroid.app.activity.fragments.SetRelayTimePeriod"
+              android:id="@+id/fragment"
+              android:layout_below="@+id/textModeControl"
+              android:layout_alignLeft="@+id/textModeControl"
+              android:layout_alignStart="@+id/textModeControl"
+              android:layout_marginTop="40dp"
+              android:layout_above="@+id/button"
+              android:layout_alignRight="@+id/textModeControl"
+              android:layout_alignEnd="@+id/textModeControl"/>
 </RelativeLayout>
