--- a/app/src/main/res/layout/relay_view.xml
+++ b/app/src/main/res/layout/relay_view.xml
@@ -4,11 +4,12 @@
                 android:layout_height="match_parent"
                 android:orientation="vertical">
 
-    <ExpandableListView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:id="@+id/expandableListView2" android:layout_alignParentTop="true"
-            android:layout_alignParentLeft="true" android:layout_alignParentStart="true"
-            android:layout_alignParentRight="true"
-            android:layout_alignParentEnd="true"/>
+    <ExpandableListView android:layout_height="wrap_content"
+                        android:layout_width="wrap_content"
+                        android:layout_alignParentEnd="true"
+                        android:layout_alignParentRight="true"
+                        android:layout_alignParentStart="true"
+                        android:layout_alignParentLeft="true"
+                        android:layout_alignParentTop="true"
+                        android:id="@+id/expListViewRelay"/>
 </RelativeLayout>
