--- a/app/src/main/res/layout/set_user_phone.xml
+++ b/app/src/main/res/layout/set_user_phone.xml
@@ -4,47 +4,13 @@
                 android:layout_width="match_parent"
                 android:layout_height="match_parent">
 
-    <TextView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:textAppearance="?android:attr/textAppearanceLarge"
-            android:text="@string/textInputPhone"
-            android:id="@+id/textInputPhone"
-            android:layout_alignParentTop="true"
-            android:layout_alignParentLeft="true"
-            android:layout_alignParentStart="true"/>
-    <EditText
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:inputType="phone"
-            android:ems="10"
-            android:id="@+id/valueInputPhone"
-            android:layout_alignParentTop="true"
-            android:layout_alignParentRight="true"
-            android:layout_alignParentEnd="true"
-            android:gravity="left"/>
-    <TextView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:textAppearance="?android:attr/textAppearanceLarge"
-            android:text="@string/text_notification_type"
-            android:id="@+id/text_notification_type"
-            android:layout_marginTop="15dp"
-            android:layout_below="@+id/valueInputPhone"
-            android:layout_centerHorizontal="true"/>
-    <ExpandableListView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:id="@+id/expandableListView"
-            android:layout_centerHorizontal="true"
-            android:layout_below="@+id/text_notification_type"
-            android:layout_above="@+id/btn_set_user_phone"/>
-    <Button
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="@string/text_btn_apply"
-            android:id="@+id/btn_set_user_phone"
-            android:onClick="onClick"
-            android:layout_alignParentBottom="true"
-            android:layout_centerHorizontal="true"/>
+    <TextView android:layout_height="wrap_content" android:layout_width="wrap_content" android:layout_alignParentStart="true" android:layout_alignParentLeft="true" android:layout_alignParentTop="true" android:id="@+id/textInputPhone" android:text="@string/textInputPhone" android:textAppearance="?android:attr/textAppearanceLarge"/>
+
+    <EditText android:layout_height="wrap_content" android:layout_width="wrap_content" android:layout_alignParentTop="true" android:id="@+id/valueInputPhone" android:gravity="left" android:layout_alignParentEnd="true" android:layout_alignParentRight="true" android:ems="10" android:inputType="phone"/>
+
+    <TextView android:layout_height="wrap_content" android:layout_width="wrap_content" android:id="@+id/text_notification_type" android:text="@string/text_notification_type" android:textAppearance="?android:attr/textAppearanceLarge" android:layout_centerHorizontal="true" android:layout_below="@+id/valueInputPhone" android:layout_marginTop="15dp"/>
+
+    <ExpandableListView android:layout_height="wrap_content" android:layout_width="wrap_content" android:id="@+id/expListViewUserPhone" android:layout_centerHorizontal="true" android:layout_below="@+id/text_notification_type" android:layout_above="@+id/btn_set_user_phone"/>
+
+    <Button android:layout_height="wrap_content" android:layout_width="wrap_content" android:id="@+id/btn_set_user_phone" android:text="@string/text_btn_apply" android:layout_centerHorizontal="true" android:layout_alignParentBottom="true" android:onClick="onClick"/>
 </RelativeLayout>
