--- a/app/src/main/res/layout/set_relay_time_period.xml
+++ b/app/src/main/res/layout/set_relay_time_period.xml
@@ -8,8 +8,8 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:textAppearance="?android:attr/textAppearanceLarge"
-            android:text="@string/textTitle"
-            android:id="@+id/textTitle"
+            android:text="@string/titleRelayTimePeriod"
+            android:id="@+id/titleRelayTimePeriod"
             android:layout_alignParentTop="true"
             android:layout_alignParentRight="false"
             android:layout_alignParentEnd="true"
@@ -23,7 +23,7 @@
             android:text="@string/textDescription"
             android:id="@+id/textDescription"
             android:layout_gravity="center_horizontal"
-            android:layout_below="@+id/textTitle"
+            android:layout_below="@+id/titleRelayTimePeriod"
             android:layout_alignParentLeft="true"
             android:layout_alignParentStart="true"
             android:layout_marginTop="40dp"/>
@@ -43,7 +43,8 @@
             android:ems="10"
             android:id="@+id/valueMinOn"
             android:layout_below="@+id/textMinOn"
-            android:layout_centerHorizontal="true"/>
+            android:layout_centerHorizontal="true"
+            android:gravity="center_horizontal"/>
     <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
@@ -59,5 +60,6 @@
             android:ems="10"
             android:id="@+id/valueSecOn"
             android:layout_below="@+id/textSecOn"
-            android:layout_centerHorizontal="true"/>
+            android:layout_centerHorizontal="true"
+            android:gravity="center_horizontal"/>
 </RelativeLayout>
