--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -32,11 +32,20 @@
 				android:text="@string/btnReloadSettings"
 				android:id="@+id/btnReloadSettings" android:layout_gravity="center_horizontal" android:layout_weight="0"
 				android:onClick="clickReloadSettings"/>
+		<TextView
+				android:layout_width="wrap_content"
+				android:layout_height="wrap_content"
+				android:textAppearance="?android:attr/textAppearanceLarge"
+				android:text="Large Text"
+				android:id="@+id/tv" android:layout_weight="0"/>
 		<Button
 				android:layout_width="wrap_content"
 				android:layout_height="wrap_content"
 				android:text="Стоп сервис"
-				android:id="@+id/btnStopService" android:layout_gravity="right" android:layout_weight="0"/>
+				android:id="@+id/btnStopService"
+				android:layout_gravity="right"
+				android:layout_weight="0"
+				android:onClick="clickBtnStopService"/>
 
 	</LinearLayout>
 
