--- a/app/src/main/res/layout/basic_view.xml
+++ b/app/src/main/res/layout/basic_view.xml
@@ -69,8 +69,8 @@
 			android:textAppearance="?android:attr/textAppearanceLarge"
 			android:text="@string/valueBattery"
 			android:id="@+id/valueBattery"
-			android:layout_alignTop="@+id/textBattery" android:layout_alignLeft="@+id/toggleButton3"
-			android:layout_alignStart="@+id/toggleButton3"/>
+			android:layout_alignTop="@+id/textBattery" android:layout_alignLeft="@+id/relay6Btn"
+			android:layout_alignStart="@+id/relay6Btn"/>
 	<TextView
 			android:layout_width="wrap_content"
 			android:layout_height="wrap_content"
@@ -78,8 +78,8 @@
 			android:text="@string/textRelay4"
 			android:id="@+id/textRelay4"
 			android:layout_marginTop="44dp"
-			android:layout_below="@+id/textBattery" android:layout_alignLeft="@+id/toggleButton"
-			android:layout_alignStart="@+id/toggleButton"/>
+			android:layout_below="@+id/textBattery" android:layout_alignLeft="@+id/relay4Btn"
+			android:layout_alignStart="@+id/relay4Btn"/>
 	<!--android:layout_centerVertical="true" -->
 
 	<TextView
@@ -96,27 +96,27 @@
 			android:textAppearance="?android:attr/textAppearanceLarge"
 			android:text="@string/textRelay6"
 			android:id="@+id/textRelay6"
-			android:layout_above="@+id/toggleButton" android:layout_alignRight="@+id/textStateOnDate"
+			android:layout_above="@+id/relay4Btn" android:layout_alignRight="@+id/textStateOnDate"
 			android:layout_alignEnd="@+id/textStateOnDate"/>
 	<ToggleButton
 			android:layout_width="wrap_content"
 			android:layout_height="wrap_content"
 			android:text="New ToggleButton"
-			android:id="@+id/toggleButton"
+			android:id="@+id/relay4Btn"
 			android:layout_below="@+id/textRelay4" android:layout_alignLeft="@+id/textEnergy"
-			android:layout_alignStart="@+id/textEnergy" android:layout_marginTop="26dp"/>
+			android:layout_alignStart="@+id/textEnergy" android:layout_marginTop="26dp" android:checked="false"/>
 	<ToggleButton
 			android:layout_width="wrap_content"
 			android:layout_height="wrap_content"
 			android:text="New ToggleButton"
-			android:id="@+id/toggleButton2"
-			android:layout_alignTop="@+id/toggleButton" android:layout_centerHorizontal="true"/>
+			android:id="@+id/relay5Btn"
+			android:layout_alignTop="@+id/relay4Btn" android:layout_centerHorizontal="true" android:checked="false"/>
 	<ToggleButton
 			android:layout_width="wrap_content"
 			android:layout_height="wrap_content"
 			android:text="New ToggleButton"
-			android:id="@+id/toggleButton3"
-			android:layout_alignTop="@+id/toggleButton2" android:layout_alignRight="@+id/textRelay6"
-			android:layout_alignEnd="@+id/textRelay6"/>
+			android:id="@+id/relay6Btn"
+			android:layout_alignTop="@+id/relay5Btn" android:layout_alignRight="@+id/textRelay6"
+			android:layout_alignEnd="@+id/textRelay6" android:checked="false"/>
 
 </RelativeLayout>
